# corruption-transparency-system

./: .env.example  .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 17584e2032ff_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  bids.py  contractors.py  contracts.py  departments.py  tenders.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  bid.py  contract.py  contractor.py  department.py  enums.py  indicator.py  log.py  risk_score.py  tender.py  user.py
backend/app/schemas/: auth.py  bid.py  contract.py  contractor.py  department.py  tender.py
backend/app/seed/: generate_synthetic.py  seed_users.py
backend/app/services/: awarding.py  awarding_db.py  ml_anomaly.py  risk_engine.py  risk_engine_db.py
backend/app/tests/: test_awarding.py  test_risk_engine.py
frontend/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
