[project]
name = "corruption-monitoring-backend"
version = "0.1.0"
description = "Public Procurement Risk Monitoring System — backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"